samples/_failures_safe/1761402506_528830_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20aa9532.c:157:1: error: expected ‘{’ at end of input
  157 | void state_done_action(struct
      | ^~~~
